--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "commander": "^2.19.0",
     "esm": "^3.2.3",
     "fs-readdir-recursive": "^1.1.0",
-    "js-yaml": "^3.12.0"
+    "js-yaml": "^3.12.0",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "eslint": "^5.13.0",
