--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,15 +27,19 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
-      - run: npm run version
+      - name: bump version
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          npm run version
       - name: Push changes
-        uses: ad-m/github-push-action@master
+        uses: ad-m/github-push-action@0.5.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           tags: true
 
   publish-gpr:
-    needs: build
+    needs: tag
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
